<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <LinearLayout style="@style/LinStyle"
        android:orientation="vertical"
        android:id="@+id/parent">


        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/dial" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/dial"
                android:contentDescription="@string/dial"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/los40" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/los40"
                android:contentDescription="@string/los40"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/los40clas" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/los40clas"
                android:contentDescription="@string/los40clas"
                android:src="@drawable/go"/>
        </RelativeLayout>


        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/cien" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/cien"
                android:contentDescription="@string/cien"
                android:src="@drawable/go"/>
        </RelativeLayout>


        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/rock" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/rock"
                android:contentDescription="@string/rock"
                android:src="@drawable/go"/>
        </RelativeLayout>


        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/loca" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/loca"
                android:contentDescription="@string/loca"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/rac1" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/rac1"
                android:contentDescription="@string/rac1"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/onda" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/onda"
                android:contentDescription="@string/onda"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/ibiza" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/ibiza"
                android:contentDescription="@string/ibiza"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/rne" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/rne"
                android:contentDescription="@string/rne"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/inter" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/inter"
                android:contentDescription="@string/inter"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/ser" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/ser"
                android:contentDescription="@string/ser"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/ib" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/ib"
                android:contentDescription="@string/ib"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/vinilo" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/vinilo"
                android:contentDescription="@string/vinilo"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/cope" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/cope"
                android:contentDescription="@string/cope"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/max" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/max"
                android:contentDescription="@string/max"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/hit" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/hit"
                android:contentDescription="@string/hit"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/kiss" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/kiss"
                android:contentDescription="@string/kiss"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/gay" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/gay"
                android:contentDescription="@string/gay"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/fresca" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/fresca"
                android:contentDescription="@string/fresca"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/holi" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/holi"
                android:contentDescription="@string/holi"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/xxx" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/xxx"
                android:contentDescription="@string/xxx"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/radiole" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/radiole"
                android:contentDescription="@string/radiole"
                android:src="@drawable/go"/>
        </RelativeLayout>

        <RelativeLayout style="RelatStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView style="@style/TextViewStyle"
                android:text="@string/localatino" />
            <ImageView
                style="@style/ImageStyle" android:id="@+id/localatino"
                android:contentDescription="@string/localatino"
                android:src="@drawable/go"/>
        </RelativeLayout>



    </LinearLayout>
</ScrollView>

